Restructure project and make all tests pass
There is now a root POM with modules for general Spock tests, Mockito,
PowerMock, Sarek.

I made an effort to get the build passing, even Geb tests which were
previously broken due to changed or missing web pages, drag & drop
issues and other browser-specific problems.

With test BOM and test resources 1.4.2, for now everything works with
Spock 1.3 and Groovy 2.5. The next steps will be to
  - upgrade to Spock 2.1 and Groovy 3 (soon Groovy 4 in 2.2),
  - merge with my separate Spock 2, Groovy 3 project,
  - create a branch for the then legacy Spock 1.3, Groovy 2.5 tests